--- a/pgups/templates/pgups/competition_starts.html
+++ b/pgups/templates/pgups/competition_starts.html
@@ -1,6 +1,7 @@
 {% extends 'pgups/base.html' %}
 {% load staticfiles %}
 {% load l10n %}
+{% load extras %}
 {% block content %}
 
 <div class="container">
