--- a/pgups/templates/pgups/reg.html
+++ b/pgups/templates/pgups/reg.html
@@ -13,6 +13,11 @@
 					<p class="lead">Пожалуйста, внимательно прочитайте правила и заполните заявку. <br>Укажите свои контактные данные, имена и фамилии участников, год рождения,
 				основную и при необходимости дополнительную дисциплину, а также предварительное время.</p>
 					<p><i>Кнопка отправки становится активной, если заполнены все обязательные поля.</i></p>
+					<p>До окончания срока подачи заявок, указанного в регламенте соревнований, вы можете
+						редактировать собственные заявки. После внесения любых изменений не забудьте нажать на
+						кнопку <b>"Отправить заявку"</b>.</p>
+					<p>После окончания срока подачи заявок учетные записи деактивируются и выкладываются
+                        общедоступные стартовые протоколы.</p>
 					<p>Если у вас возникли сложности с отправкой заявки, звоните:<br>
 						+7 (921) 953-23-45 Притула Елена Ивановна<br>
 						+7 (911) 771-55-49 Пономарёв Сергей Анатольевич
@@ -42,7 +47,7 @@
 				<div class="well row">
 					<div class="col-md-7 col-xs-12">
 						<h3>Заявитель</h3><br>
-						<p>Если заявка индивидуальная, оставьте поле "Команда" пустым.</p>
+						<p>Если команда указана неверно, свяжитесь с организаторами (см. телефоны выше).</p>
 					</div>
 				</div> <!-- End of well -->
 
