users added slides generator

--- a/pgups/templates/pgups/competition_starts.html
+++ b/pgups/templates/pgups/competition_starts.html
@@ -82,4 +82,5 @@
 
 	{% endfor %}
 </div>
+<a href="{% url 'generate_starts_slides' competition_id=competition.id %}" target="_blank">Сгенерировать слайды</a>
 {% endblock %}
